--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,10 @@
 /.bundle
 
 # Ignore all logfiles and tempfiles.
-/log/*
-/tmp/*
-/log/.keep
-/tmp/.keep
+log/*
+tmp/*
+log/.keep
+tmp/.keep
 
 /node_modules
 /yarn-error.log
