--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "spores",
   "private": true,
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.9.7"
+  }
 }
